--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #1a1a2e;
-  color: #eee;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 #login-screen {
@@ -20,15 +20,28 @@ input, button {
   border: none;
   font-size: 16px;
 }
+.image-container {
+  position: absolute;
+  top: 0;
+  left: 0; /* Cambia a 'right: 0;' para colocarla en la esquina superior derecha */
+  background-color: yellow;
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.img1 {
+  width: 164px; /* Ajusta el tamaño según lo que necesites */
+  height: auto;
+}
 
 button {
-  background-color: #6a0dad;
-  color: white;
+  background-color: #3d39ff;
+  color: rgb(0, 0, 0);
   cursor: pointer;
 }
 
 header {
-  background-color: #2e2e4d;
+  background-color: #FFE043;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -37,7 +50,7 @@ header {
 
 .logo {
   font-size: 24px;
-  color: #bb86fc;
+  color: #4235ff;
 }
 
 .profile {
@@ -53,19 +66,19 @@ header {
 
 .sidebar {
   width: 200px;
-  background-color: #2c2c3e;
+  background-color: #FFE043;
   padding: 1rem;
 }
 
 .sidebar h2 {
-  color: #bb86fc;
+  color: #0059ff;
 }
 
 .sidebar li {
   list-style: none;
   margin: 10px 0;
   cursor: pointer;
-  color: #ccc;
+  color: #000000;
 }
 
 .sidebar li:hover {
@@ -99,7 +112,7 @@ header {
 }
 
 .comments button {
-  background-color: #6a0dad;
+  background-color: #4235ff;
 }
   
   
