--- a/style.css
+++ b/style.css
@@ -1,43 +1,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #858585;
+  background-color: #ffffff;
   color: #000000;
-}
-
-#login-screen {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-input, button {
-  margin: 10px;
-  padding: 10px;
-  border-radius: 8px;
-  border: none;
-  font-size: 16px;
-}
-.image-container {
-  position: absolute;
-  top: 0;
-  left: 0; /* Cambia a 'right: 0;' para colocarla en la esquina superior derecha */
-  background-color: yellow;
-  padding: 5px;
-  border-radius: 8px;
-}
-
-.img1 {
-  width: 164px; /* Ajusta el tamaño según lo que necesites */
-  height: auto;
-}
-
-button {
-  background-color: #3d39ff;
-  color: rgb(0, 0, 0);
-  cursor: pointer;
 }
 
 header {
@@ -114,5 +79,20 @@ header {
 .comments button {
   background-color: #4235ff;
 }
+
+.image-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: yellow;
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.img1 {
+  width: 164px;
+  height: auto;
+}
+
   
   
