--- a/style.css
+++ b/style.css
@@ -2,17 +2,19 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Arial, sans-serif;
-  color: #333;
-  background: linear-gradient(to right, #eadf66, #664cc4);
+  font-family: 'Segoe UI', Arial;
+  color: #000000;
+  background: linear-gradient(to right, #ffffff, #4b59ff
+ );
 }
 
 /* ========== HEADER Y PERFIL ========== */
 header {
+  color: #ffdd57;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #ffdd57;
+  background-color: #1b1b1b;
   padding: 10px 20px;
 }
 
@@ -52,6 +54,8 @@ header {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+
+
 
 .profile button:hover {
   background-color: #3f51b5;
@@ -123,8 +127,9 @@ header {
 }
 
 .sidebar {
+  color: #ffdd57;
   width: 200px;
-  background-color: #FFE043;
+  background-color: #1b1b1b;
   padding: 1rem;
 }
 
@@ -133,21 +138,21 @@ header {
   margin: 10px 0;
   padding: 10px;
   cursor: pointer;
-  color: #000;
-  border: 2px solid #ccc;
+  color: #ffdd57;
+  border: 2px solid #9b9ca0;
   border-radius: 8px;
   transition: border-color 0.3s, background-color 0.3s;
 }
 
 .sidebar li:hover {
-  color: #bb86fc;
-  border-color: #3d39ff;
-  background-color: #f5f5ff;
+  color: #1b1b1b;
+  border-color: #000000;
+  background-color: #9b9ca0;
 }
 
 .sidebar li.active {
-  background-color: #e6f2ff;
-  border-color: #3d39ff;
+  background-color: #8a8b8b;
+  
   font-weight: bold;
 }
 
@@ -163,7 +168,7 @@ header {
 
 .progress {
   margin-top: 1rem;
-  color: #bb86fc;
+  color: #3d39ff;
 }
 
 .progress label {
@@ -350,13 +355,13 @@ progress::-webkit-progress-value {
 .info-section {
   margin-bottom: 20px;
   padding: 15px;
-  border-left: 4px solid #3d39ff;
-  background-color: #f9f9f9;
+  border-left: 4px solid #9b9ca0;
+  background-color: #9b9ca0;
   border-radius: 8px;
 }
 
 .info-section h2 {
-  color: #3d39ff;
+  color: #ffffff;
   margin-bottom: 8px;
 }
 
@@ -429,4 +434,50 @@ button:hover {
 .img1 {
   width: 164px;
   height: auto;
+}
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #004aad; /* azul fuerte */
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  z-index: 1000;
+}
+
+.navbar-logo {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.navbar-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.navbar-links a:hover {
+  color: #ffd700; /* amarillo */
+}
+
+/* Ajuste para el contenido debajo de la navbar */
+body {
+  padding-top: 70px;
 }
