--- a/index.css
+++ b/index.css
@@ -66,6 +66,12 @@ body, html {
   font-size: 2.5rem;
   margin: 0;
 }
+.img1 {
+   width: 164px;
+  height: auto;
+   
+}
+
 
 .welcome-header p {
   font-size: 1.2rem;
