--- a/style.css
+++ b/style.css
@@ -30,8 +30,11 @@ header {
 .nav-links a {
   color: white;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: bold;
   transition: color 0.3s ease;
+
+
+
 }
 
 .nav-links a:hover {
