--- a/index.css
+++ b/index.css
@@ -17,22 +17,33 @@ body, html {
   gap: 1.5rem;
   display: flex;
   padding: 10px 20px;
-  justify-content: center;
+  align-items: center;
   z-index: 1000;
-   margin-bottom: 20px;
+
+ 
+
 }
 
 .nav-links {
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: flex-end;
+  
 }
 
+/* .nav-link1 {
+  justify-content: center;
+} */
+
+
+
 .nav-links a {
-  color: white;
+ color: white;
   text-decoration: none;
   font-weight: bold;
-  font-size: 1.1rem;
   transition: color 0.3s ease;
+  
 }
 
 .nav-links a:hover {
@@ -45,6 +56,7 @@ body, html {
   align-items: center;
   min-height: 100vh;
   padding-top: 150px; /* espacio para la barra de navegación */
+  
 }
 
 .welcome-content {
